--- a/src/views/stamps/stamp-list.less
+++ b/src/views/stamps/stamp-list.less
@@ -57,7 +57,7 @@
 	.caret {
 		float: right;
 		top: 7px;
-		position: inherit;
+		position: relative;
 	}
 }
 
@@ -67,7 +67,7 @@
 	.caret {
 		float: right;
 		top: 7px;
-		position: inherit;
+		position: relative;
 	}
 }
 
